navigate and layout

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn.active {
+  background: rgba(0, 125, 255, 0.08);
+}
